@startuml

title __BAGGER's Class Diagram__\n

  namespace bagger {
    class bagger.Bagger {
        + Bagger()
        + hoechstgeschwindigkeit()
    }
  }
  

  namespace bagger {
    class bagger.Schaufelradbagger {
        + durchmesserRad : int
        + Schaufelradbagger()
        + getDurchmesserRad()
        + setDurchmesserRad()
    }
  }
  

  namespace bagger {
    class bagger.Seilbagger {
        + seillaenge : int
        + Seilbagger()
        + getSeillaenge()
        + setSeillaenge()
    }
  }
  

  bagger.Bagger -up-|> baumaschine.Baumaschinen
  bagger.Schaufelradbagger -up-|> bagger.Bagger
  bagger.Seilbagger -up-|> bagger.Bagger


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
